; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/xfrm/extr_xfrm_policy.c_xfrm_dst_check.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/xfrm/extr_xfrm_policy.c_xfrm_dst_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dst_entry = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.dst_entry* (%struct.dst_entry*, i32)* @xfrm_dst_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.dst_entry* @xfrm_dst_check(%struct.dst_entry* %0, i32 %1) #0 {
  %3 = alloca %struct.dst_entry*, align 8
  %4 = alloca %struct.dst_entry*, align 8
  %5 = alloca i32, align 4
  store %struct.dst_entry* %0, %struct.dst_entry** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.dst_entry*, %struct.dst_entry** %4, align 8
  %7 = getelementptr inbounds %struct.dst_entry, %struct.dst_entry* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp slt i64 %8, 0
  br i1 %9, label %10, label %16

10:                                               ; preds = %2
  %11 = load %struct.dst_entry*, %struct.dst_entry** %4, align 8
  %12 = call i32 @stale_bundle(%struct.dst_entry* %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %16, label %14

14:                                               ; preds = %10
  %15 = load %struct.dst_entry*, %struct.dst_entry** %4, align 8
  store %struct.dst_entry* %15, %struct.dst_entry** %3, align 8
  br label %17

16:                                               ; preds = %10, %2
  store %struct.dst_entry* null, %struct.dst_entry** %3, align 8
  br label %17

17:                                               ; preds = %16, %14
  %18 = load %struct.dst_entry*, %struct.dst_entry** %3, align 8
  ret %struct.dst_entry* %18
}

declare dso_local i32 @stale_bundle(%struct.dst_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
